--- a/views/emails/mail15days.ejs
+++ b/views/emails/mail15days.ejs
@@ -1,7 +1,7 @@
 ⏲ Plus que 2 semaines pour faire le point sur ta mission
 Bonjour <%= user.username %> !
 
-D'après [nos informations](https://beta.gouv.fr/communaute/), c'est le <%= user.end %> qu'on avait prévu de faire le point sur ta mission à beta, en particulier si tu restes parmi nous ou pas.
+D'après [nos informations](https://beta.gouv.fr/communaute/), c'est le <%= user.end %> que ta mission à beta s'achève.
 
 Si tu nous quittes bien à cette date (snif), assure-toi de prendre connaissance dès maintenant de [ce qu'il te faudra faire](https://doc.incubateur.net/communaute/au-revoir) en partant.
 
