--- a/views/emails/mail2days.ejs
+++ b/views/emails/mail2days.ejs
@@ -1,7 +1,7 @@
 ⏰ Dernier jour pour faire le point sur ta mission
 Bonjour <%= user.fullname %> !
 
-D'après [nos informations](https://beta.gouv.fr/communaute/), c'est demain qu'on devait statuer sur ta mission à beta, en particulier si tu restes parmi nous ou pas. Sans action de ta part, on va donc considérer que c'est ta date de départ.
+D'après [nos informations](https://beta.gouv.fr/communaute/), c'est demain que ta mission à beta s'achève. Sans action de ta part, on va donc considérer que c'est ta date de départ.
 
 Peut-être que tu as oublié, ou remis à la dernière minute, ou que tu n'avais pas encore tous les éléments concernant la suite de ta mission : si c'est le cas, on s'en réjouit et tu peux dès maintenant [mettre à jour ta nouvelle date de fin (ou de renouvellement)](https://github.com/betagouv/beta.gouv.fr/edit/master/content/_authors/<%= user.id %>.md).
 C'est possible que ces modifications ne soient pas publiées à temps, et que tu reçoives des messages de désabonnement à la liste de diffusion par exemple; ce n'est pas très grave, dès qu'elles seront publiées on te réabonnera à nouveau, etc.
